log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: log-output
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  strategy: {}
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: my-local-pvc
          persistentVolumeClaim:
            claimName: my-local-pvc
      containers:
        - image: lucksei/log-output-container0:latest
          name: log-output-container0
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/data
          resources: {}
        - image: lucksei/log-output-container1:latest
          name: log-output-container1
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/data
            - name: my-local-pvc
              mountPath: /usr/src/app/data0
          resources: {}
status: {}
