log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-string-generator-svc
spec:
  type: ClusterIP
  selector:
    app: random-string-generator
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
